Preferable discovery method in PeriodicDiscovery. Issue: SPYT-82